# iaomai

./: .gitignore  README.md  pyproject.toml
iaomai/: miscellaneous.py  outages.py
notebooks/: good_to_know.ipynb  nuclear_reactors.ipynb
tests/: conftest.py  tests.py
