[project]
name = "iaomai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entsoe-py>=0.7.5",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
]


[tool.setuptools]
packages = ["iaomai"]
